# rag_llamaindex

./: .gitignore  Makefile  README.md  pyproject.toml
Science_Community/: 2025-09-12-LlamaBedRock.ipynb  2025-09-12-LlamaIndexScienceCommunityChat.ipynb  MetaDataExtraction.ipynb
Science_Community/data/: meetingMarieAlbert.txt
sc_app/: README.md  app.py  requirements.txt  run_app.sh
sc_app/data/: MarieCurie.txt
sc_bedrock_app/: README.md  app.py  requirements.txt  run_app.sh
sc_bedrock_app/data/: AlbertEinstein.txt  friends.txt
