[project]
name = "rag-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "llama-index>=0.14.0",
    "llama-index-embeddings-bedrock>=0.6.2",
    "llama-index-llms-bedrock>=0.4.2",
    "llama-index-llms-bedrock-converse>=0.9.2",
    "matplotlib>=3.10.6",
    "spacy>=3.8.7",
]
